[gd_scene load_steps=6 format=3 uid="uid://hvnwicq88ps1"]

[ext_resource type="Script" path="res://scripts/sphere.gd" id="1_2ew4i"]
[ext_resource type="Texture2D" uid="uid://b8ke2ft1o1jx2" path="res://assets/bullets/enemy_bullet/enemyBullet.png" id="3_n51im"]
[ext_resource type="Texture2D" uid="uid://qw5xqlqjowi5" path="res://assets/bullets/poison_bullet/poison_bullet.png" id="4_egk1i"]
[ext_resource type="Texture2D" uid="uid://dk7d5q7mksd0x" path="res://assets/bullets/haste_bullet/haste_bullet.png" id="5_83p83"]

[sub_resource type="CircleShape2D" id="CircleShape2D_616tr"]

[node name="Sphere" type="Area2D"]
script = ExtResource("1_2ew4i")

[node name="sphere" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.588889, 0.566667)
texture = ExtResource("3_n51im")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_616tr")

[node name="Lifetime Timer" type="Timer" parent="."]

[node name="Effects" type="Node2D" parent="."]

[node name="poison" type="Sprite2D" parent="Effects"]
visible = false
position = Vector2(2.38419e-07, 2.98023e-08)
scale = Vector2(0.561111, 0.538889)
texture = ExtResource("4_egk1i")

[node name="haste" type="Sprite2D" parent="Effects"]
visible = false
position = Vector2(0.125, -0.125)
scale = Vector2(0.572222, 0.538889)
texture = ExtResource("5_83p83")

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime Timer" to="." method="_on_lifetime_timer_timeout"]
